# NSQD

./: .gitignore  CITATION.cff  DkGpx1.xml  ImuCsvTest.csv  Makefile  PathGenerationAlgorithm.py  PathGenerationLonLat.py  README.md  camera.cpp  camera.hpp  config.xml  dronecam  label_converter.py  main  my_program  pathfordrone.xml  test3.csv
NSQDClient/: NSQDClient.sln
NSQDClient/Client/: Client.vcxproj  Client.vcxproj.filters  imgui.ini
NSQDClient/Client/include/: Constants.h  TCPSocket.h  client.h  gui.h
NSQDClient/Client/src/: Message.hpp  TCPSocket.cpp  client.cpp  gui.cpp  netserver.cpp
NSQDClient/Server/: Server.cpp  Server.h  Server.vcxproj  Server.vcxproj.filters
YOLO/: README.md  YOLO_validering.xlsx  config.yaml
YOLO/data/labels/train/: image_20.txt
YOLO/data/labels/val/: image_31.txt  image_9.txt
backend/: README.md
backend/src/Onboard-SDK-ROS/dji_sdk/launch/: sdk.launch
backend/src/flight_control/: CMakeLists.txt  package.xml
backend/src/flight_control/include/: Constants.hpp  Main.hpp  Matrice100.hpp  Vision.hpp
backend/src/flight_control/src/: Main.cpp  Matrice100.cpp  Matrice100.hpp  Message.hpp  Server.cpp  Server.h  Vision.cpp  test.cpp  test_program.cpp  tinyxml2.cpp
backend/src/flight_control_old/: package.xml
backend/src/flight_control_old/src/: Server.h
data/labels/test/: image_10.txt  image_17.txt
data/labels/train/: image_12.txt  image_21.txt  image_6.txt  image_7.txt  image_8.txt
docs/: README.md
frontend/: NSQDClient.sln
frontend/Client/: Client.vcxproj  Client.vcxproj.filters
frontend/Client/include/: Constants.h  TCPSocket.h
frontend/Client/src/: Message.hpp  TCPSocket.cpp
images/: config.xml
include/: camera.hpp  config.hpp
src/: drone.cpp  old.cpp
src/example_package/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/example_package/include/: xmlparser.hpp  xmlparser.hpp~
src/example_package/res/: route.xml  route.xml.save  route.xml~  route_new.xml~
src/example_package/src/: add_two_ints_client.cpp  add_two_ints_client.cpp~  add_two_ints_server.cpp  add_two_ints_server.cpp~  dji_control_examples.cpp  dji_control_examples.cpp~  move.cpp  move.cpp~  test.cpp  test2.cpp  test2.cpp~  xmlparser.cpp  xmlparser.cpp~
src/flight_control/: CMakeLists.txt  package.xml
src/flight_control/include/: controller.hpp  debug.hpp  socketserver.hpp  socketserver.hpp~
src/flight_control/src/: controller.cpp  controller.cpp.save  controller.cpp~  debug.cpp  flight_control.cpp  socketserver.cpp  socketserver.cpp~
utils/PathGeneration/: PathgenerationLonLat.py
utils/YOLO/: YOLO_tester.py  YOLO_trainer.py  config.yaml
utils/YOLO/HyperparamSettings/: optimizer.json
utils/YOLO/data/labels/test/: image_35.txt
utils/YOLO/data/labels/train/: image_11.txt  image_13.txt  image_36.txt
utils/YOLO/data/labels/val/: image_32.txt  image_33.txt
