<?xml version="1.0"?>
<package format="2">
	<name>flight_control</name>
	<version>0.0.1</version>
	<description>Description of your package</description>
	<maintainer email="your.email@example.com">John Doe</maintainer>
	<license>MIT</license>
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<exec_depend>roscpp</exec_depend>
</package>
